5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1671_1100.log
== TEST (2019-04-24 18:26:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada: ")

if((valor == 2)):
	print("Animal: Tartaruga"):
elif((valor == 5)):
	print("Animal: Garca")
elif((valor == 10)):
	print("Animal: Arara")
elif((valor == 20)):
	print("Animal: Mico-leao-dourado")
elif((valor == 50)):
	print("Animal: Onca-pintada")
else((valor == 100)):
	print("Animal: Garoupa")
-- ERROR:
File "XXXX", line 8
    print("Animal: Tartaruga"):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:29:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada: ")

if((valor == 2)):
	print("Animal:" "Tartaruga"):
elif((valor == 5)):
	print("Animal:" "Graca"):
elif((valor == 10)):
	print("Animal:" "Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal:" "Onca-pintada")
else((valor == 100)):
	print("Animal:" "Garoupa")
-- ERROR:
File "XXXX", line 8
    print("Animal:" "Tartaruga"):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:29:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada: ")

if((valor == 2)):
	print("Animal:" "Tartaruga")
elif((valor == 5)):
	print("Animal:" "Graca")
elif((valor == 10)):
	print("Animal:" "Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal:" "Onca-pintada")
else((valor == 100)):
	print("Animal:" "Garoupa")
-- ERROR:
File "XXXX", line 17
    else((valor == 100)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:31:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada: ")

if((valor == 2)):
	print("Animal:" "Tartaruga")
elif((valor == 5)):
	print("Animal:" "Graca")
elif((valor == 10)):
	print("Animal:" "Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal:" "Onca-pintada")
elif((valor == 100)):
	print("Animal:" "Garoupa")
else:
	print("Animal:" "Invalido")
-- OUTPUT:
Entrada: 
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:32:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada: ")

if((valor == 2)):
	print("Animal:" "Tartaruga")
elif((valor == 5)):
	print("Animal:" "Graca")
elif((valor == 10)):
	print("Animal:" "Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal:" "Onca-pintada")
elif((valor == 100)):
	print("Animal:" "Garoupa")
else:
	print("Animal:" "Invalido")
-- OUTPUT:
Entrada: 
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:32:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada: ")

if((valor == 2)):
	print("Animal:" "Tartaruga")
elif((valor == 5)):
	print("Animal:" "Graca")
elif((valor == 10)):
	print("Animal:" "Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal:" "Onca-pintada")
elif((valor == 100)):
	print("Animal:" "Garoupa")
else:
	print("Animal:" "Invalido")
-- OUTPUT:
Entrada: 
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:32:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada: ")

if((valor == 2)):
	print("Animal:" "Tartaruga")
elif((valor == 5)):
	print("Animal:" "Graca")
elif((valor == 10)):
	print("Animal:" "Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal:" "Onca-pintada")
elif((valor == 100)):
	print("Animal:" "Garoupa")
else:
	print("Animal:" "Invalido")
-- OUTPUT:
Entrada: 
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 18:32:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada: ")

if((valor == 2)):
	print("Animal:" "Tartaruga")
elif((valor == 5)):
	print("Animal:" "Graca")
elif((valor == 10)):
	print("Animal:" "Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal:" "Onca-pintada")
elif((valor == 100)):
	print("Animal:" "Garoupa")
else:
	print("Animal:" "Invalido")
-- EXECUTION TIME:
0.214001
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 
Animal:Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 
Animal:Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:32:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada: ")

if((valor == 2)):
	print("Animal:" "Tartaruga")
elif((valor == 5)):
	print("Animal:" "Graca")
elif((valor == 10)):
	print("Animal:" "Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal:" "Onca-pintada")
elif((valor == 100)):
	print("Animal:" "Garoupa")
else:
	print("Animal:" "Invalido")
-- OUTPUT:
Entrada: 
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:33:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada:", valor, ",")

if((valor == 2)):
	print("Animal:" "Tartaruga")
elif((valor == 5)):
	print("Animal:" "Graca")
elif((valor == 10)):
	print("Animal:" "Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal:" "Onca-pintada")
elif((valor == 100)):
	print("Animal:" "Garoupa")
else:
	print("Animal:" "Invalido")
-- OUTPUT:
Entrada: 100 ,
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:33:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada:", valor)

if((valor == 2)):
	print("Animal:" "Tartaruga")
elif((valor == 5)):
	print("Animal:" "Graca")
elif((valor == 10)):
	print("Animal:" "Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal:" "Onca-pintada")
elif((valor == 100)):
	print("Animal:" "Garoupa")
else:
	print("Animal:" "Invalido")
-- OUTPUT:
Entrada: 100
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 18:35:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada:", valor)

if((valor == 2)):
	print("Animal: ""Tartaruga")
elif((valor == 5)):
	print("Animal: ""Graca")
elif((valor == 10)):
	print("Animal: ""Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal: " "Onca-pintada")
elif((valor == 100)):
	print("Animal: ""Garoupa")
else:
	print("Animal: ""Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 18:35:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
valor = int(input("Digite um valor: "))
print ("Entrada:", valor)

if((valor == 2)):
	print("Animal: ""Tartaruga")
elif((valor == 5)):
	print("Animal: ""Graca")
elif((valor == 10)):
	print("Animal: ""Arara")
elif((valor == 20)):
	print("Animal:" "Mico-leao-dourado")
elif((valor == 50)):
	print("Animal: " "Onca-pintada")
elif((valor == 100)):
	print("Animal: ""Garoupa")
else:
	print("Animal: ""Invalido")
-- EXECUTION TIME:
0.129107
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
